# e-test

./: .gitattributes  .gitignore  README.md  requirements.txt
newtest/: README.md  pyproject.toml  report.md
newtest/src/newtest/: crew.py  main.py
